--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
+    "angular-in-memory-web-api": "^0.5.4",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
