--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
@@ -43,6 +43,9 @@
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
+  "config": {
+    "ionic_source_map": "source-map"
+  },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
