--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
+    "@ionic/lab": "1.0.8",
     "angular-in-memory-web-api": "^0.5.4",
     "typescript": "~2.6.2"
   },
