--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "^2.1.3",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^7.1.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.1.0",
@@ -38,7 +38,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
+    "@ionic/app-scripts": "3.2.0",
     "@ionic/lab": "1.0.8",
     "angular-in-memory-web-api": "^0.5.4",
     "typescript": "~2.6.2"
