--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "^2.1.3",
+    "@ultimate/ngxerrors": "^1.4.0",
+    "angularfire2": "^5.0.0-rc.12",
     "cordova-android": "^7.1.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.1.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
