--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "lint": "ionic-app-scripts lint",
+    "firebase-init": "node ./scripts/firebase-init.js"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
     "angular-in-memory-web-api": "^0.5.4",
+    "firebase-admin": "^6.0.0",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
