--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lexion",
-  "version": "0.0.2",
-  "author": "Ionic Framework",
+  "version": "0.0.3",
+  "author": "dotnetjedi",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -18,16 +18,17 @@
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
+    "@angular/fire": "^5.0.0",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.11.0",
-    "@ionic-native/splash-screen": "~4.11.0",
-    "@ionic-native/status-bar": "~4.11.0",
+    "@ionic-native/core": "~4.12.0",
+    "@ionic-native/splash-screen": "~4.12.0",
+    "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
-    "@ionic/storage": "^2.1.3",
-    "firebase": "^5.4.2",
+    "@ionic/storage": "2.1.3",
+    "firebase": "^5.5.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
