--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "ionic-migration": "npx tslint -c ionic-migration.json -p tsconfig.json",
     "firebase-init": "node ./scripts/firebase-init.js",
-    "firebase-deploy": "firebase deploy"
+    "firebase-deploy": "firebase deploy",
+    "build-prod": "ng build --prod",
+    "http-server": "http-server -p 8080 -c-1 www/"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +25,9 @@
     "@angular/http": "~6.1.1",
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
+    "@angular/pwa": "^0.8.4",
     "@angular/router": "~6.1.1",
+    "@angular/service-worker": "~6.1.1",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
@@ -35,16 +40,17 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler": "~6.1.1",
-    "@angular/compiler-cli": "~6.1.1",
-    "@angular/language-service": "~6.1.1",
     "@angular-devkit/architect": "~0.7.2",
     "@angular-devkit/build-angular": "~0.7.2",
     "@angular-devkit/core": "~0.7.2",
     "@angular-devkit/schematics": "~0.7.2",
+    "@angular/cli": "~6.1.1",
+    "@angular/compiler": "~6.1.1",
+    "@angular/compiler-cli": "~6.1.1",
+    "@angular/language-service": "~6.1.1",
     "@ionic/ng-toolkit": "^1.0.0",
     "@ionic/schematics-angular": "^1.0.0",
+    "@ionic/v4-migration-tslint": "^1.5.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.9.2",
