--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,9 @@
             ],
             "styles": [
               {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
+              {
                 "input": "src/theme/variables.scss"
               },
               {
@@ -88,6 +91,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "styles.css"
             ],
             "scripts": [],
