--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.1.9",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "~6.1.1",
     "@angular/core": "~6.1.1",
     "@angular/fire": "^5.0.2",
     "@angular/forms": "~6.1.1",
     "@angular/http": "~6.1.1",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/pwa": "^0.8.4",
