--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,6 @@
   "name": "lexion",
   "integrations": {},
   "type": "angular",
-  "pro_id": "c088818b"
+  "pro_id": "c088818b",
+  "id": "c088818b"
 }
