--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,6 @@
 {
   "name": "lexion",
   "integrations": {},
-  "type": "angular",
-  "pro_id": "c088818b",
+  "type": "react",
   "id": "c088818b"
 }
