--- a/package.json
+++ b/package.json
@@ -1,74 +1,53 @@
 {
   "name": "lexion",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": "dotnetjedi",
   "homepage": "http://lexion.cf/",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "ionic-migration": "npx tslint -c ionic-migration.json -p tsconfig.json",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "firebase-init": "node ./scripts/firebase-init.js",
-    "firebase-deploy": "firebase deploy",
-    "build-prod": "ng build --prod",
-    "http-server": "http-server -p 8080 -c-1 www/"
+    "firebase-deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.9",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "~6.1.1",
-    "@angular/core": "~6.1.1",
-    "@angular/fire": "^5.0.2",
-    "@angular/forms": "~6.1.1",
-    "@angular/http": "~6.1.1",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "~6.1.1",
-    "@angular/platform-browser-dynamic": "~6.1.1",
-    "@angular/pwa": "^0.8.4",
-    "@angular/router": "~6.1.1",
-    "@angular/service-worker": "~6.1.1",
-    "@ionic-native/core": "5.0.0-beta.15",
-    "@ionic-native/splash-screen": "5.0.0-beta.15",
-    "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "4.0.0-beta.7",
-    "@ionic/pro": "2.0.3",
-    "@ionic/storage": "^2.2.0",
-    "core-js": "^2.5.3",
-    "firebase": "^5.5.3",
-    "rxjs": "6.2.2",
-    "zone.js": "^0.8.26"
+    "@ionic/react": "^4.11.0",
+    "@ionic/react-router": "^4.11.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.12",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-router": "5.1.3",
+    "@types/react-router-dom": "5.1.3",
+    "ionicons": "^4.6.3",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.3.0",
+    "typescript": "3.7.4",
+    "firebase": "7.6.1",
+    "rxjs": "6.5.4"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "description": "An Ionic project",
   "devDependencies": {
-    "@angular-devkit/architect": "~0.7.2",
-    "@angular-devkit/build-angular": "~0.7.2",
-    "@angular-devkit/core": "~0.7.2",
-    "@angular-devkit/schematics": "~0.7.2",
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler": "~6.1.1",
-    "@angular/compiler-cli": "~6.1.1",
-    "@angular/language-service": "~6.1.1",
-    "@ionic/ng-toolkit": "^1.0.0",
-    "@ionic/schematics-angular": "^1.0.0",
-    "@ionic/v4-migration-tslint": "^1.5.1",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.9.2",
-    "codelyzer": "~4.4.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
-  },
-  "description": "An Ionic project"
+    "tslint-react": "^4.1.0"
+  }
 }
