--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prettier": "prettier --write \".src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
+    "tslint": "tsc --noEmit",
     "firebase-init": "node ./scripts/firebase-init.js",
     "firebase-deploy": "firebase deploy"
   },
@@ -27,7 +29,6 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
-    "typescript": "3.7.4",
     "firebase": "7.6.1",
     "rxjs": "6.5.4"
   },
@@ -48,6 +49,8 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "tslint-react": "^4.1.0"
+    "prettier": "^1.19.1",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.7.4"
   }
 }
