--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write \".src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
-    "tslint": "tsc --noEmit",
+    "prettier": "prettier --write \"./src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
+    "pre-commit": "lint-staged",
+    "eslint": "tsc --noEmit && eslint --ext .ts,.tsx,.js,.jsx ./src/**",
+    "eslint:fix": "tsc --noEmit && eslint --fix --ext .ts,.tsx,.js,.jsx ./src/**",
     "firebase-init": "node ./scripts/firebase-init.js",
     "firebase-deploy": "firebase deploy"
   },
@@ -23,13 +25,13 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "5.1.3",
     "@types/react-router-dom": "5.1.3",
+    "firebase": "7.6.1",
     "ionicons": "^4.6.3",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
-    "firebase": "7.6.1",
     "rxjs": "6.5.4"
   },
   "eslintConfig": {
@@ -49,8 +51,25 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "firebase-admin": "^8.9.0",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
-    "tslint-react": "^4.1.0",
     "typescript": "^3.7.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pre-commit"
+    }
   }
 }
