--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.0",
-    "rxjs": "6.5.4"
+    "react-scripts": "3.3.0"
   },
   "eslintConfig": {
     "extends": "react-app"
