--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "zen-observable": "^0.8.15"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +51,7 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
+    "@types/zen-observable": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "eslint": "^6.8.0",
