--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "5.1.3",
     "@types/react-router-dom": "5.1.3",
+    "date-fns": "^2.8.1",
     "firebase": "7.6.1",
     "ionicons": "^4.6.3",
     "react": "16.12.0",
