--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
+    "react-simple-keyboard": "^2.1.84",
     "zen-observable": "^0.8.15"
   },
   "eslintConfig": {
