--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   },
   "private": true,
   "dependencies": {
-    "@ionic/react": "^4.11.0",
-    "@ionic/react-router": "^4.11.0",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.12",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "@types/react-router": "5.1.3",
-    "@types/react-router-dom": "5.1.3",
-    "date-fns": "^2.8.1",
-    "firebase": "7.6.1",
+    "@ionic/react": "^4.11.10",
+    "@ionic/react-router": "^4.11.10",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.26",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router": "^5.1.4",
+    "@types/react-router-dom": "^5.1.3",
+    "date-fns": "^2.9.0",
+    "firebase": "^7.8.0",
     "ionicons": "^4.6.3",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.0",
-    "react-simple-keyboard": "^2.1.84",
+    "react-scripts": "^3.3.1",
+    "react-simple-keyboard": "^2.1.110",
     "zen-observable": "^0.8.15"
   },
   "eslintConfig": {
@@ -54,23 +54,23 @@
   "description": "An Ionic project",
   "devDependencies": {
     "@types/zen-observable": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "csv-parse": "^4.8.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "firebase-admin": "^8.9.0",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
+    "eslint-plugin-react": "^7.18.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "firebase-admin": "^8.9.2",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
-    "typescript": "^3.7.4"
+    "rimraf": "^3.0.1",
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
