--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "private": true,
   "dependencies": {
-    "@ionic/react": "^4.11.10",
-    "@ionic/react-router": "^4.11.10",
+    "@ionic/pwa-elements": "^1.4.1",
+    "@ionic/react": "^4.11.0",
+    "@ionic/react-hooks": "0.0.6",
+    "@ionic/react-router": "^4.11.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
