--- a/firebase.json
+++ b/firebase.json
@@ -21,6 +21,28 @@
           ]
         }
       ]
+    },
+    {
+      "target": "primary",
+      "public": "build",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ],
+      "headers": [
+        {
+          "source": "/**",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public, max-age=31536000"
+            }
+          ]
+        }
+      ]
     }
   ]
 }
