--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,3 @@
 {
-  "*.{ts,tsx}": ["npm run eslint:fix", "npm run prettier", "git add"],
-  "*.{js,jsx}": ["npm run prettier", "git add"]
+  "*.{ts,tsx,js,jsx}": ["npm run lint:fix", "npm run prettier", "git add"]
 }
