--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"./src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
     "pre-commit": "lint-staged",
-    "eslint": "tsc --noEmit && eslint --ext .ts,.tsx,.js,.jsx ./src/**",
-    "eslint:fix": "tsc --noEmit && eslint --fix --ext .ts,.tsx,.js,.jsx ./src/**",
-    "firebase-upload": "node ./scripts/firebase-upload.js",
-    "firebase-deploy": "firebase deploy"
+    "lint": "tsc --noEmit && eslint ./src/**/*.{js,jsx,ts,tsx}",
+    "lint:fix": "eslint --fix ./src/**/*.{js,jsx,ts,tsx}",
+    "upload": "node ./scripts/firebase-upload.js",
+    "deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -56,13 +56,14 @@
   "description": "Simple vocabulary application made on React and Ionic with a backend on Firebase",
   "devDependencies": {
     "@types/zen-observable": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.19.2",
     "csv-parse": "^4.8.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.2",
