--- a/firebase.json
+++ b/firebase.json
@@ -1,33 +1,7 @@
 {
   "hosting": [
     {
-      "target": "default",
-      "public": "build",
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**"
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ],
-      "headers": [
-        {
-          "source": "/**",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "public, max-age=31536000"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "target": "primary",
+      "target": "web",
       "public": "build",
       "ignore": [
         "firebase.json",
