--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   },
   "private": true,
   "dependencies": {
-    "@ionic/pwa-elements": "^1.4.1",
-    "@ionic/react": "^5.0.0",
-    "@ionic/react-hooks": "0.0.6",
-    "@ionic/react-router": "^5.0.0",
+    "@ionic/pwa-elements": "^1.5.1",
+    "@ionic/react": "^5.0.5",
+    "@ionic/react-hooks": "^0.0.6",
+    "@ionic/react-router": "^5.0.5",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.26",
-    "@types/react": "^16.9.19",
+    "@types/node": "^12.12.30",
+    "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "date-fns": "^2.9.0",
-    "firebase": "^7.8.0",
-    "ionicons": "^5.0.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "date-fns": "^2.11.0",
+    "firebase": "^7.11.0",
+    "ionicons": "^5.0.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^3.3.1",
-    "react-simple-keyboard": "^2.1.110",
+    "react-scripts": "^3.4.0",
+    "react-simple-keyboard": "^2.2.33",
     "zen-observable": "^0.8.15"
   },
   "eslintConfig": {
@@ -56,24 +56,24 @@
   "description": "Simple vocabulary application made on React and Ionic with a backend on Firebase",
   "devDependencies": {
     "@types/zen-observable": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.19.2",
-    "csv-parse": "^4.8.5",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "csv-parse": "^4.8.8",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.2",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "firebase-admin": "^8.9.2",
-    "husky": "^4.2.1",
-    "lint-staged": "^10.0.7",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "firebase-admin": "^8.10.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.1",
-    "typescript": "^3.7.5"
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
