--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@ionic/react": "^5.0.5",
     "@ionic/react-hooks": "^0.0.6",
     "@ionic/react-router": "^5.0.5",
+    "@reduxjs/toolkit": "^1.3.0",
     "date-fns": "^2.11.0",
     "firebase": "^7.12.0",
     "ionicons": "^5.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
@@ -53,8 +55,10 @@
     "@types/node": "^12.12.30",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/webpack-env": "^1.15.1",
     "@types/zen-observable": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
