--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-  "*.{ts,tsx,js,jsx}": ["npm run lint:fix", "npm run prettier", "git add"]
+  "*.{ts,tsx,js,jsx}": ["npm run lint:fix", "npm run prettier"]
 }
