--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ionic/react-hooks": "^0.0.6",
     "@ionic/react-router": "^5.0.5",
     "@reduxjs/toolkit": "^1.3.0",
+    "@vx/axis": "0.0.195",
+    "@vx/scale": "0.0.195",
     "date-fns": "^2.11.0",
     "firebase": "^7.12.0",
     "ionicons": "^5.0.1",
@@ -32,6 +34,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
     "react-simple-keyboard": "^2.2.40",
+    "react-sizeme": "^2.6.12",
     "zen-observable": "^0.8.15"
   },
   "eslintConfig": {
@@ -51,6 +54,7 @@
   },
   "description": "Simple vocabulary application made on React and Ionic with a backend on Firebase",
   "devDependencies": {
+    "@types/d3-array": "^2.0.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.30",
     "@types/react": "^16.9.25",
