--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vocabionic",
+  "name": "vocario",
   "version": "0.0.18",
   "author": "dotnetjedi",
-  "homepage": "https://vocabionic.web.app/",
+  "homepage": "https://vocario.web.app/",
   "scripts": {
     "start": "react-scripts start",
     "build": "rimraf ./build && react-scripts build",
