added ripple effect

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Lexion",
-  "name": "Lexion",
+  "short_name": "Vocario",
+  "name": "Vocario",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
