--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.12.0",
     "firebase": "^7.14.0",
     "ionicons": "^5.0.1",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
