--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 140
+  "printWidth": 140,
+  "endOfLine": "crlf"
 }
