--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "import/extensions": "off",
+    "import/no-extraneous-dependencies": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
