--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
+REACT_APP_COUNT_TO_COMPLETE=3
+REACT_APP_NEW_WORDS_PER_DAY=20
