improved sinthesize function

--- a/functions/package.json
+++ b/functions/package.json
@@ -82,6 +82,7 @@
           "js": "never"
         }
       ],
+      "import/no-extraneous-dependencies": "off",
       "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/no-explicit-any": "off"
     }
