--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ionicons": "^5.0.1",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-audio-player": "^0.13.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "5.1.2",
@@ -61,6 +62,7 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
+    "@types/react-audio-player": "^0.11.0",
     "@types/react-dom": "^16.9.7",
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.7",
