--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,7 @@
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "cross-env GOOGLE_APPLICATION_CREDENTIALS=C:\\_projects_\\vocario-firebase-adminsdk-2q80y-97508346f6.json firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -18,27 +18,28 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^2.3.0",
     "cors": "^2.8.5",
-    "firebase-admin": "^8.11.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.6.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-prettier": "^3.1.3",
     "firebase-functions-test": "^0.2.1",
     "jest": "^25.5.4",
     "prettier": "^2.0.5",
     "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   },
   "private": true,
   "eslintConfig": {
