--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
   },
   "private": true,
   "dependencies": {
-    "@ionic/pwa-elements": "^1.5.2",
-    "@ionic/react": "^5.2.1",
+    "@ionic/pwa-elements": "^3.0.1",
+    "@ionic/react": "^5.4.1",
     "@ionic/react-hooks": "0.0.8",
-    "@ionic/react-router": "^5.2.1",
-    "@reduxjs/toolkit": "^1.3.6",
+    "@ionic/react-router": "^5.4.1",
+    "@reduxjs/toolkit": "^1.4.0",
     "@vx/axis": "^0.0.197",
     "@vx/scale": "^0.0.197",
-    "date-fns": "^2.14.0",
-    "firebase": "^7.15.1",
-    "formik": "^2.1.4",
-    "ionicons": "^5.0.1",
+    "date-fns": "^2.16.1",
+    "firebase": "^8.0.0",
+    "formik": "^2.2.1",
+    "ionicons": "^5.2.3",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-audio-player": "^0.13.0",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "react-simple-keyboard": "^2.3.70",
+    "react-scripts": "4.0.0",
+    "react-simple-keyboard": "^2.5.31",
     "react-sizeme": "^2.6.12",
     "zen-observable": "^0.8.15"
   },
@@ -58,35 +58,35 @@
   },
   "description": "Simple vocabulary application made on React and Ionic with a backend on Firebase",
   "devDependencies": {
-    "@types/d3-array": "^2.0.0",
+    "@types/d3-array": "^2.4.0",
     "@types/jest": "^24.9.1",
-    "@types/node": "^14.0.13",
-    "@types/react": "^16.9.36",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
     "@types/react-audio-player": "^0.11.0",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.9",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/webpack-env": "^1.15.2",
-    "@types/zen-observable": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "csv-parse": "^4.10.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jest": "^23.13.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/webpack-env": "^1.15.3",
+    "@types/zen-observable": "^0.8.1",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "csv-parse": "^4.12.0",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "firebase-admin": "^8.12.1",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.10",
-    "prettier": "^2.0.5",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "firebase-admin": "^9.3.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.0",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.5"
+    "typescript": "^4.0.5"
   },
   "husky": {
     "hooks": {
