chore: update obsolete packages

--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
-    "@vx/axis": "0.0.199",
-    "@vx/scale": "0.0.199",
+    "@visx/axis": "^2.10.0",
+    "@visx/group": "^2.10.0",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.10.0",
     "date-fns": "2.28.0",
     "firebase": "9.8.1",
     "formik": "2.2.9",
     "ionicons": "6.0.1",
-    "node-sass": "7.0.1",
     "react": "18.1.0",
     "react-audio-player": "0.17.0",
     "react-dom": "18.1.0",
