--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
     "@types/d3-array": "3.0.2",
     "@types/jest": "27.5.1",
     "@types/node": "16.11.35",
-    "@types/react": "17.0.45",
-    "@types/react-dom": "18.0.4",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/react-redux": "7.1.24",
     "@types/react-router": "5.1.18",
     "@types/react-router-dom": "5.3.3",
