--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "react": "18.1.0",
     "react-audio-player": "0.17.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.1",
     "react-router": "5.3.1",
     "react-router-dom": "5.3.1",
     "react-scripts": "5.0.1",
     "react-simple-keyboard": "3.4.129",
-    "react-sizeme": "3.0.2",
+    "sass": "^1.51.0",
     "web-vitals": "2.1.4",
     "workbox-background-sync": "6.5.3",
     "workbox-broadcast-update": "6.5.3",
