migrate to vite

--- a/package.json
+++ b/package.json
@@ -1,51 +1,43 @@
 {
   "name": "vocario",
   "version": "0.0.40",
-  "author": "dotnetjedi",
+  "author": "zenkdev",
   "homepage": "https://vocario.web.app/",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "rimraf ./build && react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)\"",
-    "eject": "react-scripts eject",
+    "dev": "vite --open",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
     "prettier": "prettier --write \"./src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
     "pre-commit": "lint-staged",
-    "lint": "tsc --noEmit && eslint ./src/**/*.{js,jsx,ts,tsx}",
-    "lint:fix": "eslint --fix ./src/**/*.{js,jsx,ts,tsx}",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "firebase:upload": "node ./scripts/firebase-upload.js",
     "firebase:deploy": "npm run build && firebase deploy --only hosting:web",
     "firebase:get-files": "node ./scripts/firebase-get-files.js"
   },
   "private": true,
   "dependencies": {
-    "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.9.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.3",
-    "@capacitor/status-bar": "1.0.8",
     "@ionic/react": "8.7.2",
     "@ionic/react-router": "8.7.2",
-    "@reduxjs/toolkit": "1.9.7",
-    "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.5.1",
+    "@reduxjs/toolkit": "2.8.2",
     "@visx/axis": "3.4.0",
     "@visx/group": "3.3.0",
     "@visx/scale": "3.3.0",
     "@visx/shape": "3.3.0",
-    "date-fns": "2.30.0",
-    "firebase": "10.9.0",
-    "formik": "2.4.5",
-    "ionicons": "7.2.1",
-    "react": "18.3.1",
+    "d3-array": "3.2.1",
+    "date-fns": "4.1.0",
+    "firebase": "12.1.0",
+    "formik": "2.4.6",
+    "ionicons": "8.0.13",
+    "react": "19.1.1",
     "react-audio-player": "0.17.0",
-    "react-dom": "18.3.1",
+    "react-dom": "19.1.1",
     "react-redux": "8.1.3",
-    "react-router": "7.5.2",
+    "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
-    "react-scripts": "5.0.1",
     "react-simple-keyboard": "3.8.111",
-    "sass": "1.69.4",
     "web-vitals": "3.5.0",
     "workbox-background-sync": "7.3.0",
     "workbox-broadcast-update": "7.3.0",
@@ -75,40 +67,40 @@
   },
   "description": "Simple vocabulary application made on React and Ionic with a backend on Firebase",
   "devDependencies": {
-    "@capacitor/cli": "5.5.0",
+    "@eslint/js": "^9.33.0",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.7.0",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/d3-array": "3.0.9",
-    "@types/jest": "29.5.6",
-    "@types/node": "18.18.6",
-    "@types/react": "18.3.23",
-    "@types/react-dom": "18.3.7",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "@types/react-router": "5.1.20",
     "@types/react-router-dom": "5.3.3",
     "@types/webpack-env": "1.18.8",
     "@types/zen-observable": "0.8.5",
-    "csv-parse": "5.5.2",
-    "eslint": "8.51.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "firebase-admin": "11.11.0",
-    "husky": "8.0.3",
-    "lint-staged": "13.3.0",
-    "prettier": "2.8.8",
-    "rimraf": "3.0.2",
-    "typescript": "4.9.5"
+    "@vitejs/plugin-react-swc": "^4.0.0",
+    "csv-parse": "6.1.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "firebase-admin": "13.4.0",
+    "globals": "^16.3.0",
+    "husky": "9.1.7",
+    "jsdom": "26.1.0",
+    "lint-staged": "16.1.5",
+    "mime": "4.0.7",
+    "prettier": "3.6.2",
+    "rimraf": "6.0.1",
+    "sass-embedded": "1.90.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2",
+    "vitest": "3.2.4"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run pre-commit"
-    }
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
-      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     }
   }
 }
