--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,8 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "tsc --noEmit && eslint ./**/*.{ts,js}",
-    "lint:fix": "eslint --fix ./**/*.{ts,js}",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "build": "rimraf ./lib && tsc",
     "test": "jest --watch --detectOpenHandles",
     "serve": "npm run build && firebase serve --only functions",
@@ -12,85 +12,35 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "22"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@google-cloud/text-to-speech": "5.0.1",
+    "@google-cloud/text-to-speech": "6.2.0",
     "cors": "2.8.5",
-    "firebase-admin": "11.11.0",
-    "firebase-functions": "4.4.1"
+    "firebase-admin": "13.4.0",
+    "firebase-functions": "6.4.0",
+    "mime": "4.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "9.33.0",
+    "@jest/globals": "30.0.5",
     "@types/cors": "2.8.19",
     "@types/express": "4.17.23",
-    "@types/jest": "29.5.6",
-    "@types/mime": "3.0.4",
-    "@types/node": "18.18.6",
-    "@typescript-eslint/eslint-plugin": "8.39.1",
-    "@typescript-eslint/parser": "8.39.1",
-    "cross-env": "7.0.3",
-    "eslint": "8.51.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-jest": "27.9.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "firebase-functions-test": "3.1.0",
-    "jest": "29.7.0",
-    "prettier": "2.8.8",
-    "ts-jest": "29.1.1",
-    "typescript": "4.9.5"
+    "@types/jest": "30.0.0",
+    "@types/node": "22.17.2",
+    "cross-env": "10.0.0",
+    "eslint": "9.33.0",
+    "firebase-functions-test": "3.4.1",
+    "globals": "16.3.0",
+    "jest": "30.0.5",
+    "jiti": "2.5.1",
+    "prettier": "3.6.2",
+    "ts-jest": "29.4.1",
+    "typescript": "4.9.5",
+    "typescript-eslint": "8.40.0"
   },
   "private": true,
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "es6": true,
-      "node": true,
-      "jest": true
-    },
-    "extends": [
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended",
-      "airbnb-base",
-      "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 2017,
-      "sourceType": "module"
-    },
-    "plugins": [
-      "@typescript-eslint",
-      "jest"
-    ],
-    "settings": {
-      "import/resolver": {
-        "node": {
-          "extensions": [
-            ".js",
-            ".ts"
-          ]
-        }
-      }
-    },
-    "rules": {
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": ["error"],
-      "import/extensions": [
-        "error",
-        "ignorePackages",
-        {
-          "ts": "never",
-          "js": "never"
-        }
-      ],
-      "import/no-extraneous-dependencies": "off",
-      "@typescript-eslint/explicit-function-return-type": "off",
-      "@typescript-eslint/no-explicit-any": "off"
-    }
-  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
