--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "types": ["jest", "node"] // Add "jest" here
   },
   "compileOnSave": true,
   "include": ["src"]
