--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,7 @@
     "test:watch": "vitest",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "lint:steiger": "steiger ./src",
-    "pre-commit": "lint-staged"
+    "lint:steiger": "steiger ./src"
   },
   "private": true,
   "dependencies": {
@@ -64,9 +63,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "firebase-admin": "13.5.0",
     "globals": "^16.4.0",
-    "husky": "9.1.7",
     "jsdom": "27.0.1",
-    "lint-staged": "16.2.6",
     "mime": "4.1.0",
     "prettier": "3.6.2",
     "rimraf": "6.0.1",
@@ -76,10 +73,5 @@
     "vite": "^7.1.12",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "4.0.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run pre-commit"
-    }
   }
 }
