--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functions",
   "scripts": {
-    "build": "rimraf ./lib && tsc",
+    "build": "rimraf ./lib && tsgo",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint .",
@@ -29,6 +29,7 @@
     "@types/express": "4.17.25",
     "@types/jest": "30.0.0",
     "@types/node": "24.9.1",
+    "@typescript/native-preview": "7.0.0-dev.20251213.1",
     "eslint": "9.39.2",
     "firebase-functions-test": "3.4.1",
     "globals": "16.5.0",
@@ -38,5 +39,6 @@
     "typescript-eslint": "8.49.0",
     "vitest": "4.0.15"
   },
-  "private": true
+  "private": true,
+  "version": "0.0.1"
 }
